--- a/content/index.html
+++ b/content/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Hello World!</h1>
-        <p>This is a simple paragraph123.</p>
+        <p>This is a simple web page for Bestseller.</p>
     </body>
 
 </html>
