--- a/content/index.html
+++ b/content/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Hello World!</h1>
         <p>This is a simple web page for Bestseller.</p>
+        <p>What a beautiful day.</p>
     </body>
 
 </html>
